maze.lessons.maze.island.IslandMaze.scala.error
Escaper:13: error: value HORTH is not a member of object plm.universe.Direction
	if(getDirection==Direction.HORTH){avance()}
                                   ^